--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\Utility\Utility.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ViewModel\" />
+  </ItemGroup>
+
 </Project>
